--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
 	"name": "Rename Untitled",
 	"version": "1.0.1",
 	"minAppVersion": "0.12.0",
-	"description": "This is a sample plugin for Obsidian. This plugin demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
+	"description": "Clean up Untitled notes by reanming them with the contents of the first line of the document.",
+	"author": "@gavmn",
+	"authorUrl": "https://twitter.com/Gavmn",
 	"isDesktopOnly": false
 }
